# torchlab

./: .gitignore  README.md  pyproject.toml  run_pytorch_streamlit.sh
gradio_src/: app.py
grpo/: train_grpo.ipynb  train_grpo.py
notebooks/: test_torch.ipynb
notebooks/cot_noprompt/: 2024.09.28_notebook.ipynb
notebooks/pytorch/: basic_01.ipynb  basic_02.ipynb  basic_03.ipynb  basic_04.ipynb  basic_05.ipynb  cnn_01.ipynb  cnn_02.ipynb  cnn_03.ipynb  cnn_04.ipynb  lib.py  lib_test.ipynb  pca_irs.ipynb  recommand.ipynb  torch_prob.ipynb  torch_prob_01.ipynb  torch_prob_02.ipynb  torch_prob_03.ipynb  torch_prob_04.ipynb  torch_prob_05-mlp.ipynb  torch_prob_06-mlp.ipynb  torch_prob_07-cnn.ipynb
src/: Home.py  m2m100_flask.py  plots.py
src/Repository/: Attention_00.py
src/page_attention/: attention_lib.py
src/pages/: Attention.py  Clip.py  KMeans.py  PCA.py  Yolo.py  ❤️Clip.py  ❤️KMeans.py
