[tool.poetry]
name = "torchlab"
version = "0.1.0"
description = "AI & ML tutorials based on PyTorch"
authors = ["James Kim"]
license = "Appach 2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.38.0"
ipykernel = "^6.29.5"
torch = "^2.4.1"
matplotlib = "^3.9.2"
transformers = "^4.44.2"
flask = "^3.0.3"
sentencepiece = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
