[tool.poetry]
name = "torchlab"
version = "0.1.0"
description = "AI & ML tutorials based on PyTorch"
authors = ["James Kim"]
license = "Appach 2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.38.0"
ipykernel = "^6.29.5"
torch = "^2.4.0"
matplotlib = "^3.9.2"
transformers = "^4.44.2"
flask = "^3.0.3"
sentencepiece = "^0.2.0"
pillow = "^10.4.0"
vllm = "^0.6.3.post1"
setuptools = "^75.1.0"
ipywidgets = "^8.1.5"
scikit-learn = "^1.5.2"
gradio = "^4.44.1"
watchdog = "^5.0.3"
ultralytics = "8.0.200"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
